# PiCO_QL

./: Account.cpp  Account.h  LICENSE  Makefile.am  README  README.mediawiki  Type.cpp  Type.h  bridge.h  configure.ac  data.txt  docs.txt  foo.db  in.rb  main.cpp  main.template  makefile  paper.tex  search.cpp  search.h  sql_calls.c  sqlite3.c  sqlite3.h  stl_to_sql.c  stl_to_sql.h  test  test_all.sh  user_functions.c
DOCS/: bnf.txt  (+2 more)
examples/BankApp/: Account.cpp  Account.h  Makefile.am  SpecialAccount.cpp  SpecialAccount.h  SuperAccount.cpp  SuperAccount.h  bankapp_test_success.txt  diff_test.sh  generator.rb  main.cpp  makefile  pico_ql_dsl.sql  pico_ql_generator.rb  pico_ql_search_helper.cpp  pico_ql_search_helper.h  pico_ql_test.c  pico_ql_test.cpp  pico_ql_test_current.txt  pico_ql_test_success.txt  pico_ql_vt.h  picoql.py  stl_test.c  test.sh
examples/BankApp/templates/: home.html
examples/CApp/: Makefile.am  Monetary_System.h  Money.h  MoneyArray.h  capp_test_success.txt  cppapp_test_success.txt  main.c  main.cpp  main_cpp.c  main_cpp.cpp  makefile  pico_ql_dsl.sql  pico_ql_test.c  pico_ql_test.cpp  pico_ql_test_cpp.c  pico_ql_test_cpp.cpp  pico_ql_test_success.txt  test.sh
examples/Chess/: ChessPiece.cpp  ChessPiece.h  Makefile.am  Position.cpp  Position.h  erb_templates  input.txt  main.cpp  makefile  pico_ql_diff_test.sh  pico_ql_dsl.sql  pico_ql_erb_templates  pico_ql_search.h  pico_ql_test.c  pico_ql_test.cpp  pico_ql_test.h  pico_ql_test_current.txt  pico_ql_test_output.txt  pico_ql_test_success.txt  stl_search.h  stl_test.c  stl_test.h  stl_to_sql.c  test.sh  user_functions.c  workers.cpp  workers.h
src/: Makefile.am  diff_test.sh  generator.rb  pico_ql.h  pico_ql_db.c  pico_ql_db.cpp  pico_ql_db.h  pico_ql_diff_test.sh  pico_ql_error_page.cpp  pico_ql_exec.cpp  pico_ql_exec_c.c  pico_ql_generator.rb  pico_ql_interface.c  pico_ql_interface.h  pico_ql_internal.h  pico_ql_logo.c  pico_ql_logo.cpp  pico_ql_register_table.c  pico_ql_register_table.h  pico_ql_search.h  pico_ql_search_helper.c  pico_ql_search_helper.cpp  pico_ql_search_helper.h  pico_ql_step.cpp  pico_ql_swill.c  pico_ql_swill.cpp  pico_ql_swill.h  pico_ql_swill_access_func.h  pico_ql_test.c  pico_ql_test.cpp  pico_ql_test.h  pico_ql_vt.c  pico_ql_vt.cpp  pico_ql_vt.h  sqlite3.h  stl_search.h  stl_test.c  stl_test.h  stl_to_sql.c  stl_to_sql.h  (+4 more)
src/GNU-Linux/client/: pico_ql_interface.c
src/GNU-Linux/server/: errno.h  picoQL-tests.sql  pico_ql_dsl.sql  pico_ql_exec.c  pico_ql_procfs.c  stdio.c  stdio.h  stdlib.h  string.h  time.c  time.h  unistd.c
src/Linux-kernel-mod/client/: Makefile
src/Linux-kernel-mod/server/: Makefile  assert.h  fcntl.h  picoQL-auto-test.sh  picoQL-fetch.sh  picoQL-run-tests-times-X.sh  picoQL-tests.sql  picoQL_config_ioctl.c  pico_ql_dsl.sql  pico_ql_exec.c  pico_ql_exec.h  pico_ql_procfs.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  unistd.h
src/Valgrind/: Makefile  errno.c  pico_ql_directives_utils_c.erb  pico_ql_generator.rb  pico_ql_interface.h  pico_ql_internal.h  pico_ql_pre_retrieve_c.erb  pico_ql_pre_search_c.erb  pico_ql_register_serve_c.erb  pico_ql_search_h.erb  pico_ql_search_helper.c  pico_ql_test.c  pico_ql_vt.c  pico_ql_wrapper_retrieve_c.erb  stdlib.c  string.c  string.h  unistd.c  valgrind_Makefile
src/Valgrind-mod/: Makefile  Makefile.in  README.md  assert.h  cachegrind_Makefile.in  cachegrind_Makefile.proto  cachegrind_cg_main.c  cachegrind_dsl.sql  callgrind_Makefile.in  callgrind_bbcc.c  callgrind_dsl.sql  callgrind_main.c  errno.c  memcheck_Makefile.in  memcheck_dsl.sql  memcheck_mc_errors.c  memcheck_mc_main.c  pico_ql_interface.c  pico_ql_swill_ui.c  ps_vlg.sh  stdio.h  stdlib.h  string.h  time.c  unistd.c  unistd.h  valgrind_Makefile  valgrind_configure  valgrind_dsl.sql  valgrind_tap.sh
src/Valgrind-mod/valgrind-3.10.1-patches/: ._configure.patch  cachegrind_Makefile.in.patch  cachegrind_cg_main.c.patch  callgrind_Makefile.in.patch  callgrind_bbcc.c.patch  callgrind_main.c.patch  create_patches.sh  memcheck_Makefile.in.patch  memcheck_mc_errors.c.patch  memcheck_mc_main.c.patch  valgrind_tap.sh
src/Valgrind-mod/valgrind-3.9.0-patches/: cachegrind_Makefile.patch  cachegrind_cg_main.patch  callgrind_Makefile.patch  callgrind_bbcc.patch  callgrind_main.patch  memcheck_Makefile.patch  memcheck_mc_errors.patch  memcheck_mc_main.patch  valgrind_configure.patch  valgrind_tap.sh
src/erb_templates/: directives_util_functions.erb  makefile.erb  post_retrieve.erb  post_search.erb  pre_retrieve.erb  pre_search.erb  stl_class_error.erb  wrapper_search.erb
src/pico_ql_erb_templates/: pico_ql_directives_utils.erb  pico_ql_directives_utils_c.erb  pico_ql_directives_utils_cpp.erb  pico_ql_h.erb  pico_ql_makefile.erb  pico_ql_makefile_c.erb  pico_ql_makefile_cpp.erb  pico_ql_post_retrieve.erb  pico_ql_post_search_cpp.erb  pico_ql_pre_retrieve.erb  pico_ql_pre_retrieve_c.erb  pico_ql_pre_retrieve_cpp.erb  pico_ql_pre_search.erb  pico_ql_pre_search_c.erb  pico_ql_pre_search_cpp.erb  pico_ql_register_serve.erb  pico_ql_register_serve_c.erb  pico_ql_register_serve_cpp.erb  pico_ql_result_set_iter.erb  pico_ql_result_set_iter_c.erb  pico_ql_result_set_iter_cpp.erb  pico_ql_search_h.erb  pico_ql_wrapper_result_set_iter.erb  pico_ql_wrapper_result_set_iter_c.erb  pico_ql_wrapper_result_set_iter_cpp.erb  pico_ql_wrapper_retrieve.erb  pico_ql_wrapper_retrieve_c.erb  pico_ql_wrapper_retrieve_cpp.erb  pico_ql_wrapper_search.erb  pico_ql_wrapper_search_c.erb
tests/: Makefile.am  testsuite.at
tests/BankApp/: testsuite-bankapp.at
tests/BankApp/pre/: data.txt
tests/CApp/: testsuite-capp.at
tests/CApp/post/: cppapp_test_success.txt
tests/CScout/: testsuite-cscout.at
tests/Chess/: testsuite-chess.at
tests/Chess/post/: chess_test_success.txt
tests/HD5Table/: testsuite-hd5table.at
tests/Parentchild/: testsuite-parentchild.at
tests/Polymorphism/: testsuite-polymorphism.at
tests/QLandKarte/: testsuite-qlandkarte.at
tests/SparseMatrixC/: testsuite-sparsematrixc.at
tests/Stellarium/: testsuite-stellarium.at
tests/VRP/: testsuite-vrp.at
(+197 files in other folders)
